# flow-matching

./: .gitignore  pyproject.toml
bash_scripts/: struct_learning_flow_matching_kappagmm.sh  struct_learning_flow_matching_unbalanced_kappagmm.sh
flow_matching/: solver.py  visualization.py
flow_matching/datasets/: __init__.py  synthetic_datasets.py
notebooks/: 01-kappagmm_analysis.ipynb  02-struct_learning_analysis.ipynb
scripts/: struct_learning_flow_matching_kappagmm.py  struct_learning_flow_matching_unbalanced_kappagmm.py  train_flow_matching_kappagmm.py
